<?xml version="1.0"?>
<package format="2">
  <name>pal_navigation_rviz_plugins</name>
  <version>1.0.4</version>
  <description>The pal_navigation_rviz_plugins package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Proprietary</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pal_navigation_rviz_plugins</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_srvs</depend>
  <depend>pal_navigation_msgs</depend>
  <depend>laser_pattern_detector_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosconsole_bridge</depend>
  <depend>pal_composite_navigation_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
      <rviz plugin="${prefix}/plugin_description.xml"/>

  </export>
</package>
