<?xml version="1.0"?>
<package format="2">
  <name>pal_navigation_rviz_plugins</name>
  <version>1.0.15</version>
  <description>The pal_navigation_rviz_plugins package</description>

  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <build_depend>libqt_dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pal_navigation_msgs</build_depend>
  <build_depend>laser_pattern_detector_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>pal_composite_navigation_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_servoing_msgs</build_depend>
  <build_depend>dock_charge_sm_msgs</build_depend>
  <build_depend>pal_common_msgs</build_depend>
  <build_depend>sshpass</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>pal_navigation_msgs</exec_depend>
  <exec_depend>laser_pattern_detector_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosconsole_bridge</exec_depend>
  <exec_depend>pal_composite_navigation_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>laser_servoing_msgs</exec_depend>
  <exec_depend>dock_charge_sm_msgs</exec_depend>
  <exec_depend>pal_common_msgs</exec_depend>
  <exec_depend>sshpass</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
